--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -4,10 +4,10 @@
 }
 
 .company_image{
-    width: 4rem;
+    width: 6rem;
     /* aspect-ratio: 1/1; */
     overflow: hidden;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     margin:0 auto 1rem;
     border: 0.4rem solid var(--color-primary-variant);
 }
