--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,21 @@
 
 }
 
+/* 
+[data-theme='light']{
+    --color-bg: #a3a3e4;
+    --color-bg-variant: #440606;
+    --color-primary: #3c2727;
+    --color-primary-variant: rgba(116, 182, 226, 0.4);
+    --color-white: rgb(11, 10, 10);
+    --color-light: rgba(255,255,255,0.6);
+
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
+    --transition: all 400ms ease;
+} */
+
 html{
     scroll-behavior: smooth;
 }
@@ -48,7 +63,7 @@ body{
     background-color: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/bg_texture.jpg);
+    background-image: url(../src/assets/backgrounds/bg_texture_4.jpg);
 }
 
 
